Fix or suppress most JDK 9 compiler warnings (except finalize) in mbox.